[workspace]

members = [
    "crates/dkg-core",
    "crates/arpa-node",
    "crates/threshold-bls",
    "crates/log",
    "crates/core",
    "crates/dal",
    "crates/dal/sqlite",
    "crates/contract-client",
    "crates/user-cli",
]

resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

# build all our deps in release mode 
[profile.dev.package."*"]
opt-level = 0

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false


[profile.test]
opt-level = 0
incremental = true
debug-assertions = true
debug = true

[workspace.dependencies]
ethers = "2.0"
ethers-core = "2.0"
ethers-signers = "2.0"
ethers-providers = "2.0"
ethers-middleware = "2.0"
ethers-contract-abigen = "2.0"
