[workspace.package]
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
documentation = "https://docs.arpanetwork.io/"
repository = "https://github.com/ARPA-Network/BLS-TSS-Network"
homepage = "https://github.com/ARPA-Network/BLS-TSS-Network"
keywords = ["arpa", "randcast", "DKG", "BLS", "threshold"]
exclude = ["scripts/", "tests/", "test/", "docker/", "docs/"]

[workspace]

members = [
    "crates/arpa-node",
    "crates/user-cli",
    "crates/core",
    "crates/dkg-core",
    "crates/threshold-bls",
    "crates/log",
    "crates/dal",
    "crates/dal/sqlite",
    "crates/contract-client",
]

resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

# build all our deps in release mode 
[profile.dev.package."*"]
opt-level = 0

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false


[profile.test]
opt-level = 0
incremental = true
debug-assertions = true
debug = true

[workspace.dependencies]
arpa-log = { version = "0.2.2", path = "crates/log" }
arpa-core = { version = "0.2.2", path = "crates/core" }
arpa-dal = { version = "0.2.2", path = "crates/dal" }
arpa-sqlite-db = { version = "0.2.2", path = "crates/dal/sqlite" }
arpa-contract-client = { version = "0.2.2", path = "crates/contract-client" }
dkg-core = { version = "0.2.2", path = "crates/dkg-core" }
threshold-bls = { version = "0.2.2", path = "crates/threshold-bls", default-features = false, features = [
    "bn254",
] }
ethers = "2.0"
ethers-core = "2.0"
ethers-signers = "2.0"
ethers-providers = "2.0"
ethers-middleware = "2.0"
ethers-contract-abigen = "2.0"
