[package]
name = "arpa-node"
version = "0.0.1"
authors = ["arpa-network"]
edition = "2021"

[[bin]]
name = "node-client"
path = "src/node_client.rs"

[[bin]]
name = "node-shell"
path = "src/node_shell.rs"

[dependencies]
arpa-log = { path = "../log" }
arpa-core = { path = "../core" }
arpa-dal = { path = "../dal" }
arpa-sqlite-db = { path = "../dal/sqlite" }
arpa-contract-client = { path = "../contract-client" }
dkg-core = { path = "../dkg-core" }
threshold-bls = { path = "../threshold-bls", default-features = false, features = [
    "bn254",
] }

gumdrop = "0.7.0"
rand = "0.8"
bincode = "1.2.1"
glob = "0.3.0"
serde = "1.0.106"
thiserror = "1.0.15"
serde_json = "1.0.53"
hex = "0.4.2"
anyhow = "1.0.31"
futures = "0.3.5"
async-trait = "0.1.35"
tokio = { version = "1.20.1", features = ["full"] }
rustc-hex = "2.1.0"
tonic = "0.9"
prost = "0.11"
serde_yaml = "0.8"
tokio-retry = "0.3"
log = "0.4"
log4rs = "1.2.0"
log-mdc = "0.1.0"
chrono = "0.4"
structopt = "0.3"
ethers = { workspace = true, features = ["abigen", "rustls", "ws"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
tower = "0.4"
hyper = "0.14"
reedline-repl-rs = { version = "1.0.6", features = ["async"] }

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11"
