[package]
name = "arpa-node"
version = "0.2.0"
authors = ["arpa-network"]
edition = "2021"
repository = "https://github.com/ARPA-Network/BLS-TSS-Network/tree/main/crates/arpa-node"
description = "This crate provides a set of tools on the node side of the ARPA BLS Threshold Signature Scheme (BLS-TSS) Network, including Threshold-BLS based on-chain randomness service(Randcast)."

[[bin]]
name = "node-client"
path = "src/node_client.rs"

[[bin]]
name = "node-shell"
path = "src/node_shell.rs"

[[bin]]
name = "node-config-checker"
path = "src/node_config_checker.rs"

[dependencies]
arpa-log.workspace = true
arpa-core.workspace = true
arpa-dal.workspace = true
arpa-sqlite-db.workspace = true
arpa-contract-client.workspace = true
dkg-core.workspace = true
threshold-bls.workspace = true

gumdrop = "0.7.0"
rand = "0.8"
bincode = "1.2.1"
glob = "0.3.0"
serde = "1.0.106"
thiserror = "1.0.15"
serde_json = "1.0.53"
hex = "0.4.2"
anyhow = "1.0.31"
futures = "0.3.5"
async-trait = "0.1.35"
tokio = { version = "1.37.0", features = ["full"] }
rustc-hex = "2.1.0"
tonic = "0.11"
prost = "0.12"
serde_yaml = "0.8"
tokio-retry = "0.3"
log = "0.4"
log4rs = "1.2.0"
log-mdc = "0.1.0"
chrono = "0.4"
structopt = "0.3"
ethers = { workspace = true, features = ["abigen", "rustls", "ws"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
tower = "0.4"
hyper = "0.14"
reedline-repl-rs = { version = "1.0.6", features = ["async"] }
actix-web = "4"
check-latest = "1.0.2"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
