[package]
name = "arpa-contract-client"
description = "ARPA contract client library"

version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
dkg-core.workspace = true
threshold-bls.workspace = true
arpa-core.workspace = true

tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.15"
anyhow = "1.0.31"
serde = "1.0.106"
log = "0.4"
async-trait = "0.1.35"
bincode = "1.2.1"
tonic = "0.11"
prost = "0.12"
ethers = { workspace = true, features = ["abigen", "rustls", "ws"] }
rustc-hex = "2.1.0"
tokio-retry = "0.3"

[lib]
name = "arpa_contract_client"
path = "src/lib.rs"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
ethers-contract-abigen.workspace = true

[dev-dependencies]
simple_logger = "4.2.0"
