[package]
name = "dkg-core"
authors = ["nikkolasg", "Georgios Konstantopoulos <me@gakonst.com>", "kafeikui"]
description = "Distributed Key Generation (DKG) core library"

version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
crate-type = ["lib"]

[dependencies]
threshold-bls.workspace = true

async-trait = "0.1.35"
bitvec = { version = "0.17.4", default-features = false, features = [
    "std",
    "alloc",
    "serde",
] }
bincode = "1.2.1"
rand_core = { version = "0.6", default-features = false }
rand = "0.8"
static_assertions = "1.1.0"
serde = { version = "1.0.106", features = ["derive"] }
thiserror = "1.0.15"
log = "0.4"

[dev-dependencies]
threshold-bls.workspace = true
tokio = { version = "1.37.0", features = ["full"] }
