[package]
name = "arpa-log"
version = "0.2.0"
edition = "2021"

[dependencies]
arpa-log-impl = { path = "./impl" }
log = "0.4"
log-mdc = "0.1.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.31"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.53"
async-trait = "0.1.35"
parking_lot = "0.12"
once_cell = "1.16.0"
