[package]
name = "arpa-log"
description = "An attribute macro for logging function context with MDC"

version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[dependencies]
arpa-log-impl = { version = "0.2.0", path = "./impl" }
log = "0.4"
log-mdc = "0.1.0"

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1.0.31"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.53"
async-trait = "0.1.35"
parking_lot = "0.12"
once_cell = "1.16.0"
