[package]
name = "randcast-contract-mock"
version = "0.0.1"
authors = ["wrs"]
edition = "2018"

[[bin]]
name = "controller-server"
path = "src/controller_server.rs"

[[bin]]
name = "adapter-server"
path = "src/adapter_server.rs"

[dependencies]
threshold-bls = { path = "../threshold-bls", default-features = false, features = ["bn254"] }

gumdrop = "0.7.0"
rand = "0.7.3"
bincode = "1.2.1"
glob = "0.3.0"
serde = "1.0.106"
thiserror = "1.0.15"
serde_json = "1.0.53"
hex = "0.4.2"
anyhow = "1.0.31"

futures = "0.3.5"
async-trait = "0.1.35"
tokio = { version = "1.17.0", features = ["full"] }
rustc-hex = "2.1.0"
clt = "0.0.6"

tonic = "0.6"
prost = "0.9"
parking_lot = "0.12.0"
serde_yaml = "0.8"

[build-dependencies]
tonic-build = "0.6"
prost-build = "0.9"