[package]
name = "arpa-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"

[lib]
name = "arpa_stats"
path = "src/lib.rs"
