[package]
name = "arpa-user-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "user-shell"
path = "src/user_shell.rs"

[dependencies]
arpa-contract-client = { path = "../contract-client" }
arpa-core = { path = "../core" }

tokio = { version = "1.20.1", features = ["full"] }
serde = "1.0.106"
serde_yaml = "0.8"
ethers.workspace = true
thiserror = "1.0.15"
bincode = "1.2.1"
hex = "0.4.2"
anyhow = "1.0.31"
rand = "0.8"
structopt = "0.3"
reedline-repl-rs = { version = "^1.0", features = ["async"] }
