[package]
name = "arpa-sqlite-db"
version = "0.2.0"
edition = "2021"
publish = false

[dependencies]
entity = { version = "0.1.0", path = "./entity" }
migration = { version = "0.1.0", path = "./migration" }
arpa-core.workspace = true
arpa-dal.workspace = true
threshold-bls.workspace = true
dkg-core.workspace = true

sea-orm = { version = "0.12", features = [
      "sqlx-sqlite",
      "runtime-tokio-rustls",
      "macros",
      "debug-print",
] }
libsqlite3-sys = { version = "^0.26.0", default-features = false, features = [
      "pkg-config",
      "vcpkg",
      "bundled-sqlcipher-vendored-openssl",
      "unlock_notify",
] }
chrono = "0.4"
log = "0.4"
tokio = { version = "1.37.0", features = ["full"] }
ethers-core.workspace = true
thiserror = "1.0.15"
anyhow = "1.0.31"
bincode = "1.2.1"
rand = "0.8"
async-trait = "0.1.35"
serde = "1.0.106"
serde_json = "1.0.53"

[lib]
name = "arpa_sqlite_db"
path = "src/lib.rs"
