[package]
name = "arpa-log-impl"
description = "Implementation of the arpa-log crate"

version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = { version = "1.0", features = ["full", "fold"] }
quote = "1.0"
