[package]
name = "entity"
description = "SeaORM Entity for ARPA"

version.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
exclude.workspace = true

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.sea-orm]
version = "0.12" # sea-orm version
