[package]
name = "arpa-node-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
threshold-bls = { path = "../../../../threshold-bls", default-features = false, features = ["bls12_381"] }

ethers-core = { git = "https://github.com/gakonst/ethers-rs"}
ethers-signers = { git = "https://github.com/gakonst/ethers-rs"}
thiserror = "1.0.15"
serde = "1.0.106"
log = "0.4"
chrono = "0.4"
bincode = "1.2.1"
async-trait = "0.1.35"
anyhow = "1.0.31"

[lib]
name = "arpa_node_core"
path = "src/lib.rs"