[package]
name = "arpa-node-log"
version = "0.1.0"
edition = "2021"

[dependencies]
arpa-node-log-impl = { path = "./impl" }
log = "0.4"
log-mdc = "0.1.0"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
anyhow = "1.0.31"
serde = {version = "1.0.106", features = ["derive"] }
serde_json = "1.0.53"
async-trait = "0.1.35"