[package]
name = "arpa-node-dal"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
arpa-node-core = { path = "../../node/core" }
dkg-core = { path = "../../../../dkg-core" }
threshold-bls = { path = "../../../../threshold-bls", default-features = false, features = ["bls12_381"] }

tokio = { version = "1.20.1", features = ["full"] }
ethers-core = { git = "https://github.com/gakonst/ethers-rs"}
thiserror = "1.0.15"
anyhow = "1.0.31"
serde = "1.0.106"
log = "0.4"
async-trait = "0.1.35"

[lib]
name = "arpa_node_dal"
path = "src/lib.rs"